--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <p>Choose your department to view the available courses:</p>
 
-<div class="department" onclick="location.href='it_department.html'">
+<div class="department" onclick="location.href='IT Department.html'">
     IT Department
 </div>
 
