--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 
 <div class="sidebar">
     <a href="index.html">Home</a>
-    <a href="it_department.html">IT Department</a>
-    <a href="cs_department.html">Computer Science Department</a>
+    <a href="IT Department.html">IT Department</a>
+    <a href="Computer Science Department.html">Computer Science Department</a>
     <a href="mailto:izzeldinkamilaminmustafa@gmail.com">Contact Us</a> <!-- Mailto link for sending emails -->
 </div>
 
