--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
 <div class="content">
     <p>Choose your department to view the available courses:</p>
 
-    <div class="department" onclick="location.href='it_department.html'">
+    <div class="department" onclick="location.href='IT Department.html'">
         IT Department
     </div>
 
-    <div class="department" onclick="location.href='cs_department.html'">
+    <div class="department" onclick="location.href='Computer Science Department.html'">
         Computer Science Department
     </div>
 </div>
