--- a/IT Department.html
+++ b/IT Department.html
@@ -9,32 +9,45 @@
             background-color: #f9f9f9;
             margin: 0;
             padding: 0;
-            text-align: center;
         }
 
         header {
             background-color: #333;
             color: #fff;
             padding: 20px;
+            text-align: center;
         }
 
-        h1 {
-            margin: 0;
-            font-size: 24px;
+        .sidebar {
+            width: 200px;
+            height: 100vh;
+            background-color: #fff;
+            color: #333;
+            position: fixed;
+            padding: 20px;
+            text-align: left;
+            border-right: 1px solid #ddd;
+        }
+
+        .sidebar a {
+            display: block;
+            padding: 10px;
+            color: #333;
+            text-decoration: none;
+            transition: background-color 0.3s;
+        }
+
+        .sidebar a:hover {
+            background-color: #f0f0f0;
         }
 
         .content {
+            margin-left: 220px;
+            height: 80vh; /* To vertically center content */
             display: flex;
-            flex-direction: column;
             justify-content: center;
             align-items: center;
-            min-height: 80vh; /* Center the content vertically */
-        }
-
-        p {
-            font-size: 18px;
-            color: #333;
-            margin: 20px 0;
+            flex-direction: column;
         }
 
         .course {
@@ -55,7 +68,6 @@
         .course-title {
             font-size: 18px;
             font-weight: bold;
-            color: #333;
         }
 
         .course-code {
@@ -79,6 +91,13 @@
 <header>
     <h1>IT Department - Courses</h1>
 </header>
+
+<div class="sidebar">
+    <a href="index.html">Home</a>
+    <a href="it_department.html">IT Department</a>
+    <a href="cs_department.html">Computer Science Department</a>
+    <a href="mailto:izzeldinkamilaminmustafa@gmail.com">Contact Us</a>
+</div>
 
 <div class="content">
     <p>Select a course to learn more:</p>
