--- a/discrete_structures.html
+++ b/discrete_structures.html
@@ -1,1 +1,191 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Discrete Structures - Course Details</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f9f9f9;
+            margin: 0;
+            padding: 0;
+            color: #333;
+        }
+
+        header {
+            text-align: center;
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+        }
+
+        .sidebar {
+            width: 200px;
+            height: 100vh;
+            background-color: #fff;
+            color: #333;
+            position: fixed;
+            padding: 20px;
+            text-align: left;
+            border-right: 1px solid #ddd;
+        }
+
+        .sidebar a {
+            display: block;
+            padding: 10px;
+            color: #333;
+            text-decoration: none;
+            transition: background-color 0.3s;
+        }
+
+        .sidebar a:hover {
+            background-color: #f0f0f0;
+        }
+
+        .content {
+            margin-left: 220px;
+            padding: 20px;
+        }
+
+        .section {
+            margin-bottom: 20px;
+            padding: 15px;
+            background-color: #e2e2e2;
+            border-radius: 10px;
+        }
+
+        .section-title {
+            font-size: 18px;
+            font-weight: bold;
+            color: #333;
+        }
+
+        .section-content {
+            font-size: 16px;
+            color: #555;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Discrete Structures - Course Details</h1>
+</header>
+
+<div class="sidebar">
+    <a href="#course-info">Course Basic Information</a>
+    <a href="#general-objectives">General Objectives of Course</a>
+    <a href="#ilos">Intended Learning Outcomes (ILOs)</a>
+    <a href="#teaching-methods">Teaching and Learning Methods</a>
+    <a href="#evaluation-methods">Evaluation Methods</a>
+    <a href="#student-instructions">Instructions for Students</a>
+    <a href="#student-support">Student Support</a>
+    <a href="#instructor-info">Instructor Information</a>
+</div>
+
+<div class="content">
+    <div id="course-info" class="section">
+    
+
+    <div id="general-objectives" class="section">
+        <div class="section-title">General Objectives of Course</div>
+        <div class="section-content">
+            <p>This course introduces students to ideas and techniques from discrete mathematical structures widely used in computer science and IT. It teaches techniques for logical and mathematical thinking and applies them to solve problems. Topics covered include logic, proof, sets, functions, sequences, mathematical induction, recursion, and group theory for cryptography.</p>
+            <p><strong>General Objectives:</strong></p>
+            <ul>
+                <li>Appreciate Boolean algebra, logic, and set theory.</li>
+                <li>Understand logical arguments and constructs, as well as sets and functions.</li>
+                <li>Use mathematical reasoning techniques including induction and recursion.</li>
+                <li>Communicate solutions to technical problems effectively.</li>
+                <li>Demonstrate traversal methods for trees and graphs.</li>
+                <li>Model problems in computer science using graphs and trees.</li>
+            </ul>
+        </div>
+    </div>
+
+    <div id="ilos" class="section">
+        <div class="section-title">Intended Learning Outcomes (ILOs)</div>
+        <div class="section-content">
+            <ul>
+                <li><strong>Knowledge and Understanding:</strong> Think mathematically to solve real problems in computer applications.</li>
+                <li><strong>Intellectual Skills:</strong> Develop logical thinking and use methods from mathematical logic to solve real-life problems in innovative ways.</li>
+                <li><strong>Professional and Practical Skills:</strong> Develop models for real-life cases, formulate problems, and find suitable solutions.</li>
+                <li><strong>General and Transferable Skills:</strong> Express logical solutions to real-life problems and solve them using discrete structures (logic, combinatorics, graphs, etc.).</li>
+            </ul>
+        </div>
+    </div>
+
+    <div id="teaching-methods" class="section">
+        <div class="section-title">Teaching and Learning Methods</div>
+        <div class="section-content">
+            <ol>
+                <li>Recorded Lectures.</li>
+                <li>Online Quizzes.</li>
+                <li>Online Problem Solving and Discussion.</li>
+                <li>Self-Learning through System Programming Lab Experiments.</li>
+                <li>Problem Sheets to be solved and submitted.</li>
+            </ol>
+        </div>
+    </div>
+
+    <div id="evaluation-methods" class="section">
+        <div class="section-title">Evaluation Methods</div>
+        <div class="section-content">
+            <ul>
+                <li>Final Exam: 60% (Week 14)</li>
+                <li>Midterm Exam: 20% (Week 7)</li>
+                <li>Tutorials: 20% (Weeks 2, 4, 6, 8, 10, 12)</li>
+            </ul>
+        </div>
+    </div>
+
+    <div id="student-instructions" class="section">
+        <div class="section-title">Instructions for Students</div>
+        <div class="section-content">
+            <ol>
+                <li>Download lectures on time and study them carefully.</li>
+                <li>Read the corresponding chapters from the prescribed textbook.</li>
+                <li>Perform lab experiments and collaborate with classmates.</li>
+                <li>Complete quizzes and submit assignments on time.</li>
+                <li>Review past exam papers when available.</li>
+            </ol>
+        </div>
+    </div>
+
+    <div id="student-support" class="section">
+        <div class="section-title">Student Support</div>
+        <div class="section-content">
+            <p><strong>Essential Textbooks:</strong> "Discrete Mathematical Structures" by Bernard Kolman, Robert Busby, Sharon C. Ross, Sixth Edition, Pearson Publications, 2015.</p>
+            <p><strong>Basic References:</strong> "Discrete Mathematics for Computer Scientists and Mathematicians" by Joe L Mott, Abraham Kandel, Theodore P Baker, Prentice Hall of India, Second Edition, 2008. "Discrete Mathematics for Computer Scientists" by Ken Bogart, Scot Drysdale, Cliff Stein, First Edition Addison-Wesley, 2010.</p>
+            <p>Additional periodicals, websites, and other e-materials.</p>
+        </div>
+    </div>
+
+    <div id="instructor-info" class="section">
+        <div class="section-title">Instructor Information</div>
+        <div class="section-content">
+            <p><strong>Instructor's Name:</strong> Izzeldin Kamil Anin</p>
+            <p><strong>Phone (WhatsApp):</strong> +249912301900</p>
+            <p><strong>Office Hours:</strong> Scheduled online meetings will be announced.</p>
+            <p><strong>Email:</strong> To be announced.</p>
+        </div>
+    </div>
+</div>
+
+<footer>
+    &copy; 2024 Computer Science Department - University Courses
+</footer>
+
+</body>
+</html>
