--- a/Computer Science Department.html
+++ b/Computer Science Department.html
@@ -83,8 +83,8 @@
 
 <div class="sidebar">
     <a href="index.html">Home</a>
-    <a href="it_department.html">IT Department</a>
-    <a href="cs_department.html">Computer Science Department</a>
+    <a href="IT Department.html">IT Department</a>
+    <a href="Computer Science Department.html">Computer Science Department</a>
     <a href="mailto:izzeldinkamilaminmustafa@gmail.com">Contact Us</a> <!-- Link to send email -->
 </div>
 
