--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         IT Department
     </div>
 
-    <div class="department" onclick="location.href='Computer Science Department.html'">
+    <div class="department" onclick="location.href="Computer Science Department.html">
         Computer Science Department
     </div>
 </div>
