--- a/discrete_structures.html
+++ b/discrete_structures.html
@@ -172,15 +172,20 @@
         </div>
     </div>
 
-    <div id="instructor-info" class="section">
-        <div class="section-title">Instructor Information</div>
-        <div class="section-content">
-            <p><strong>Instructor's Name:</strong> Izzeldin Kamil Anin</p>
-            <p><strong>Phone (WhatsApp):</strong> +249912301900</p>
-            <p><strong>Office Hours:</strong> Scheduled online meetings will be announced.</p>
-            <p><strong>Email:</strong> To be announced.</p>
-        </div>
+   <div id="instructor-info" class="section">
+    <div class="section-title">Instructor Information</div>
+    <div class="section-content">
+        <p><strong>Instructor's Name:</strong> Izzeldin Kamil Amin</p>
+        <p><strong>Contact via WhatsApp:</strong>
+            <!-- Insert your QR code image here -->
+            <img src="DrIzzeldin.png" alt="WhatsApp QR Code to contact Instructor" width="150">
+            <!-- Adjust the width for appropriate size -->
+        </p>
+        <p><strong>Office Hours:</strong> Scheduled online meetings will be announced.</p>
+        <p><strong>Email:</strong> izzeldinkamilaminmustafa@gmail.com</p>
     </div>
+</div>
+
 </div>
 
 <footer>
