--- a/operating_systems.html
+++ b/operating_systems.html
@@ -181,7 +181,7 @@
         <p><strong>Instructor's Name:</strong> Izzeldin Kamil Amin</p>
         <p><strong>Contact via WhatsApp:</strong>
             <!-- Insert your QR code image here -->
-            <img src="DrIzzeldin.png" alt="WhatsApp QR Code to contact Instructor" width="150">
+            <img src="Dr.Izzeldin.png" alt="WhatsApp QR Code to contact Instructor" width="150">
             <!-- Adjust the width for appropriate size -->
         </p>
         <p><strong>Office Hours:</strong> Scheduled online meetings will be announced.</p>
