--- a/operating_systems.html
+++ b/operating_systems.html
@@ -175,19 +175,20 @@
         </div>
     </div>
 
-    <div id="instructor-info" class="section">
+   <div id="instructor-info" class="section">
     <div class="section-title">Instructor Information</div>
     <div class="section-content">
         <p><strong>Instructor's Name:</strong> Izzeldin Kamil Amin</p>
         <p><strong>Contact via WhatsApp:</strong>
-            <!-- Insert your QR code image here -->
-            <img src="Dr.Izzeldin.png" alt="WhatsApp QR Code to contact Instructor" width="150">
-            <!-- Adjust the width for appropriate size -->
+            <!-- Smaller QR code image -->
+            <img src="Dr.Izzeldin.png" alt="WhatsApp QR Code to contact Instructor" width="80" height="80">
+            <!-- Reduced width and height for smaller size -->
         </p>
         <p><strong>Office Hours:</strong> Scheduled online meetings will be announced.</p>
         <p><strong>Email:</strong> izzeldinkamilaminmustafa@gmail.com</p>
     </div>
 </div>
+
 </div>
 
 <footer>
