--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             left: 20px; /* Position it towards the left */
             top: 50%; /* Center vertically */
             transform: translateY(-50%); /* Adjust for vertical centering */
-            width: 50px; /* Width of the logo */
-            height: 50px; /* Height of the logo */
+            width: 70px; /* Increased width of the logo */
+            height: 70px; /* Increased height of the logo */
         }
 
         .sidebar {
@@ -111,6 +111,9 @@
 <footer>
     &copy; 2024 Dr. Izzeldin's University Courses
 </footer>
+
+</body>
+</html>
 
 </body>
 </html>
