Update Computer Science Department.html

--- a/Computer Science Department.html
+++ b/Computer Science Department.html
@@ -89,7 +89,7 @@
 </div>
 
 <div class="content">
-    <div class="course" onclick="location.href='operating_systems.html'"> <!-- Make the course clickable -->
+    <div class="course" onclick="location.href='operating_systemsCS.html'"> <!-- Make the course clickable -->
         <div class="course-title">Operating Systems</div>
         <div class="course-code">Course Code: حسب 405</div>
     </div>
