--- a/operating_systemsCS.html
+++ b/operating_systemsCS.html
@@ -1,1 +1,210 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Operating Systems - Course Details</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f9f9f9;
+            margin: 0;
+            padding: 0;
+            color: #333;
+        }
+
+        header {
+            text-align: center;
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+        }
+
+        .sidebar {
+            width: 200px;
+            height: 100vh;
+            background-color: #fff;
+            color: #333;
+            position: fixed;
+            padding: 20px;
+            text-align: left;
+            border-right: 1px solid #ddd;
+        }
+
+        .sidebar a {
+            display: block;
+            padding: 10px;
+            color: #333;
+            text-decoration: none;
+            transition: background-color 0.3s;
+        }
+
+        .sidebar a:hover {
+            background-color: #f0f0f0;
+        }
+
+        .content {
+            margin-left: 220px;
+            padding: 20px;
+        }
+
+        .section {
+            margin-bottom: 20px;
+            padding: 15px;
+            background-color: #e2e2e2;
+            border-radius: 10px;
+        }
+
+        .section-title {
+            font-size: 18px;
+            font-weight: bold;
+            color: #333;
+        }
+
+        .section-content {
+            font-size: 16px;
+            color: #555;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Operating Systems - Course Details</h1>
+</header>
+
+<div class="sidebar">
+    <a href="#general-info">Course Information</a>
+    <a href="#general-objectives">General Objectives of Course</a>
+    <a href="#ilos">Intended Learning Outcomes (ILOs)</a>
+    <a href="#teaching-methods">Teaching and Learning Methods</a>
+    <a href="#evaluation-methods">Evaluation Methods</a>
+    <a href="#student-instructions">Instructions for Students</a>
+    <a href="#student-support">Student Support</a>
+    <a href="#instructor-info">Instructor Information</a>
+</div>
+
+<div class="content">
+    <div id="general-info" class="section">
+        <div class="section-title">Course Basic Information</div>
+        <div class="section-content">
+            <p><strong>Programme(s):</strong> Computer Science, Computer-Statistics, and Computer-Mathematics</p>
+            <p><strong>Department:</strong> CS</p>
+            <p><strong>Academic Level:</strong> Fourth Year</p>
+            <p><strong>Semester:</strong> First</p>
+            <p><strong>Academic Year:</strong> 2023-2024</p>
+            <p><strong>Course Code:</strong> حسب 405</p>
+            <p><strong>Course Title:</strong> Operating Systems</p>
+            <p><strong>Prerequisites:</strong> Some knowledge of Computer Architecture, Programming in Python, C, or C++</p>
+            <p><strong>Course Type:</strong> Compulsory</p>
+            <p><strong>Credit Hours:</strong> Total: 4 Hours | Lectures: 2 | Practical: 1 | Tutorial: 1</p>
+        </div>
+    </div>
+
+    <div id="general-objectives" class="section">
+        <div class="section-title">General Objectives of Course</div>
+        <div class="section-content">
+            <p>Brief description of Course: This course deepens the understanding of virtualization, concurrency, and persistence. It explores the key functions of an operating system and enables students to develop applications using system calls.</p>
+            <p><strong>General Objectives:</strong></p>
+            <ul>
+                <li>Understand different internal structures of operating systems for various hardware.</li>
+                <li>Learn about concurrency, processes, and thread management, along with inter-process communication.</li>
+                <li>Study process synchronization and deadlocks.</li>
+                <li>Understand CPU scheduling and memory management techniques, including virtual memory.</li>
+                <li>Explore mass storage structures, I/O systems, and file system interfaces.</li>
+                <li>Examine operating system examples, including MS Windows, Linux, and Android.</li>
+                <li>Learn about protection and security in operating systems.</li>
+            </ul>
+        </div>
+    </div>
+
+    <div id="ilos" class="section">
+        <div class="section-title">Intended Learning Outcomes (ILOs)</div>
+        <div class="section-content">
+            <ul>
+                <li><strong>Knowledge and Understanding:</strong> Understand the expected functions of an operating system and how to use them.</li>
+                <li><strong>Intellectual Skill:</strong> Learn the mechanisms of using key operating system functions and new developments in the field.</li>
+                <li><strong>Professional and Practical Skills:</strong> Develop system programming skills, creating applications that utilize key operating system functions.</li>
+                <li><strong>General and Transferable Skills:</strong> Understand how to install and configure an operating system, and master adding new features or drivers.</li>
+            </ul>
+        </div>
+    </div>
+
+    <div id="teaching-methods" class="section">
+        <div class="section-title">Teaching and Learning Methods</div>
+        <div class="section-content">
+            <ol>
+                <li>Recorded Lectures.</li>
+                <li>Online Quizzes.</li>
+                <li>Online Problem Solving and Discussion.</li>
+                <li>Self-Learning through system programming Lab-Experiments.</li>
+                <li>Problem Sheets to be solved and submitted.</li>
+            </ol>
+        </div>
+    </div>
+
+    <div id="evaluation-methods" class="section">
+        <div class="section-title">Evaluation Methods</div>
+        <div class="section-content">
+            <ul>
+                <li>Final Exam: 60% (Week 14)</li>
+                <li>Midterm Exams: 25%</li>
+                <li>Lab Projects (Practical): 15%</li>
+            </ul>
+        </div>
+    </div>
+
+    <div id="student-instructions" class="section">
+        <div class="section-title">Instructions for Students</div>
+        <div class="section-content">
+            <ol>
+                <li>Download lectures on-time and study them carefully.</li>
+                <li>Read corresponding chapters from the prescribed textbook.</li>
+                <li>Perform lab experiments or collaborate with classmates.</li>
+                <li>Complete quizzes and submit assignments on time.</li>
+                <li>Review past exam papers when available.</li>
+            </ol>
+        </div>
+    </div>
+
+    <div id="student-support" class="section">
+        <div class="section-title">Student Support</div>
+        <div class="section-content">
+            <p><strong>Textbooks:</strong> "Modern Operating Systems" by Tanenbaum and Bos, 4th Edition.</p>
+            <p><strong>Basic References:</strong> "Operating System Concepts" by Silberschatz, Galvin, and Gagne, 10th Edition.</p>
+            <p>Additional periodicals, websites, and e-materials.</p>
+        </div>
+    </div>
+
+   <div id="instructor-info" class="section">
+    <div class="section-title">Instructor Information</div>
+    <div class="section-content">
+        <p><strong>Instructor's Name:</strong> Izzeldin Kamil Amin</p>
+        <p><strong>Contact via WhatsApp:</strong>
+            <!-- Smaller QR code image -->
+            <img src="Dr.Izzeldin.png" alt="WhatsApp QR Code to contact Instructor" width="80" height="80">
+            <!-- Reduced width and height for smaller size -->
+        </p>
+        <p><strong>Office Hours:</strong> Scheduled online meetings will be announced.</p>
+        <p><strong>Email:</strong> izzeldinkamilaminmustafa@gmail.com</p>
+    </div>
+</div>
+
+</div>
+
+<footer>
+    &copy; 2024 Computer Science Department - University Courses
+</footer>
+
+</body>
+</html>
