--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 <header>
     <img src="Logo_of_the_University_of_Khartoum.jpeg" alt="University Logo"> <!-- The logo image -->
-    <h1>Welcome to Dr. Izzeldin's University Courses</h1> <!-- Header text -->
+    <h1>Welcome to Dr. Izzeldin Kamil Amin's University Courses</h1> <!-- Header text -->
 </header>
 
 <div class="sidebar">
@@ -109,8 +109,8 @@
 </div>
 
 <footer>
-    &copy; 2024 Dr. Izzeldin's University Courses
-</footer>
+    &copy; 2024 Dr. Izzeldin Kamil's University Courses
+</footer> 
 
 </body>
 </html>
